--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
         <dependency>
             <groupId>io.github.nickd3000</groupId>
             <artifactId>garnet</artifactId>
-            <version>0.5.3_SNAPSHOT</version>
+<!--            <version>0.5.3_SNAPSHOT</version>-->
+            <version>0.5.3b-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -39,6 +40,7 @@
                     <source>17</source>
                     <target>17</target>
                 </configuration>
+                <version>3.13.0</version>
             </plugin>
         </plugins>
     </build>
